step-by-step/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-app
  namespace: test-app
  labels:
    app: test-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: test-app
